# zero2prod

./: .env  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  docker-compose.yml  spec.yaml
.github/: general.yml  scheduled-audit.yml
api/: subscriptions.http
configuration/: base.yaml  production.yaml
migrations/: 20230102005235_create_subscriptions_table.sql  20230116211627_make_status_not_null_in_subscriptions.sql  20230116212109_create_subsciprtion_tokens_table.sql  20230123053819_create_users_table.sql  20230226074701_create_idempotency_table.sql  20230227042958_create_newsletter_issues_table.sql  20230227043116_create_issue_delivery_queue_table.sql
scripts/db/ci/: init-db.sh
scripts/db/docker/: init-user-db.sh
src/: configuration.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  password.rs
src/domain/: mod.rs  new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  persistence.rs
src/routes/: health_check.rs  mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: create_user.rs  dashboard.rs  mod.rs  newsletters.rs
src/routes/admin/password/: get.rs  mod.rs  post.rs
src/routes/home/: home.html
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  main.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
